[tool.poetry]
name = "dht-prometheus"
version = "0.1.0"
description = ""
authors = ["Jan Rous <rousik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.20.0"
adafruit-circuitpython-dht = "^4.0.4"

[tool.poetry.scripts]
collector = "dht_prometheus.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
